parser.output
Grammar

    0 $accept: formula $end

    1 formula: terms

    2 terms: NEG term connective terms
    3      | term connective terms
    4      | term connective '(' terms ')'
    5      | '(' terms ')' connective term
    6      | term
    7      | NEG term
    8      | NEG '(' terms ')'

    9 term: predicate_term
   10     | type_term
   11     | param_term
   12     | quantified_term
   13     | event_term
   14     | grammar_term
   15     | KEYWORD_TRUEP
   16     | IDENTIFIER EQUAL IDENTIFIER
   17     | pronoun_term

   18 connective: AND
   19           | EQUIV
   20           | IMPLY
   21           | OR

   22 grammar_term: TAG '(' arguments ')'

   23 pronoun_term: '(' IDENTIFIER EQUAL PREDICATE '{' TAG '}' ')'

   24 type_term: KEYWORD_TYPE '{' TAG '}' '(' arguments ')'

   25 param_term: KEYWORD_PARAM '{' TAG '}' '(' arguments ')'

   26 predicate_term: PREDICATE '{' TAG '}' '(' arguments ')'
   27               | PREDICATE '{' TAG '}' '(' '(' terms ')' ')'

   28 arguments: arguments COMMA argument
   29          | argument

   30 argument: IDENTIFIER
   31         | terms

   32 event_term: '(' EVENT '(' IDENTIFIER ')' EQUAL IDENTIFIER ')'

   33 quantified_term: KEYWORD_QUANTIFIER IDENTIFIER '.' '(' terms ')'


Terminals, with rules where they appear

    $end (0) 0
    '(' <t> (40) 4 5 8 22 23 24 25 26 27 32 33
    ')' <t> (41) 4 5 8 22 23 24 25 26 27 32 33
    '.' <t> (46) 33
    '{' <t> (123) 23 24 25 26 27
    '}' <t> (125) 23 24 25 26 27
    error (256)
    PREDICATE <t> (258) 23 26 27
    IDENTIFIER <t> (259) 16 23 30 32 33
    KEYWORD_TRUEP <t> (260) 15
    NEG <t> (261) 2 7 8
    COMMA <t> (262) 28
    EQUAL <t> (263) 16 23 32
    AND <t> (264) 18
    OR <t> (265) 21
    IMPLY <t> (266) 20
    EQUIV <t> (267) 19
    KEYWORD_QUANTIFIER <t> (268) 33
    KEYWORD_TYPE <t> (269) 24
    KEYWORD_PARAM <t> (270) 25
    TAG <t> (271) 22 23 24 25 26 27
    EVENT <t> (272) 32


Nonterminals, with rules where they appear

    $accept (23)
        on left: 0
    formula (24)
        on left: 1
        on right: 0
    terms <node> (25)
        on left: 2 3 4 5 6 7 8
        on right: 1 2 3 4 5 8 27 31 33
    term <node> (26)
        on left: 9 10 11 12 13 14 15 16 17
        on right: 2 3 4 5 6 7
    connective <conntype> (27)
        on left: 18 19 20 21
        on right: 2 3 4 5
    grammar_term <node> (28)
        on left: 22
        on right: 14
    pronoun_term <node> (29)
        on left: 23
        on right: 17
    type_term <node> (30)
        on left: 24
        on right: 10
    param_term <node> (31)
        on left: 25
        on right: 11
    predicate_term <node> (32)
        on left: 26 27
        on right: 9
    arguments <nodelist> (33)
        on left: 28 29
        on right: 22 24 25 26 28
    argument <node> (34)
        on left: 30 31
        on right: 28 29
    event_term <node> (35)
        on left: 32
        on right: 13
    quantified_term <node> (36)
        on left: 33
        on right: 12


State 0

    0 $accept: • formula $end

    PREDICATE           shift, and go to state 1
    IDENTIFIER          shift, and go to state 2
    KEYWORD_TRUEP       shift, and go to state 3
    NEG                 shift, and go to state 4
    '('                 shift, and go to state 5
    KEYWORD_QUANTIFIER  shift, and go to state 6
    KEYWORD_TYPE        shift, and go to state 7
    KEYWORD_PARAM       shift, and go to state 8
    TAG                 shift, and go to state 9

    formula          go to state 10
    terms            go to state 11
    term             go to state 12
    grammar_term     go to state 13
    pronoun_term     go to state 14
    type_term        go to state 15
    param_term       go to state 16
    predicate_term   go to state 17
    event_term       go to state 18
    quantified_term  go to state 19


State 1

   26 predicate_term: PREDICATE • '{' TAG '}' '(' arguments ')'
   27               | PREDICATE • '{' TAG '}' '(' '(' terms ')' ')'

    '{'  shift, and go to state 20


State 2

   16 term: IDENTIFIER • EQUAL IDENTIFIER

    EQUAL  shift, and go to state 21


State 3

   15 term: KEYWORD_TRUEP •

    $default  reduce using rule 15 (term)


State 4

    2 terms: NEG • term connective terms
    7      | NEG • term
    8      | NEG • '(' terms ')'

    PREDICATE           shift, and go to state 1
    IDENTIFIER          shift, and go to state 2
    KEYWORD_TRUEP       shift, and go to state 3
    '('                 shift, and go to state 22
    KEYWORD_QUANTIFIER  shift, and go to state 6
    KEYWORD_TYPE        shift, and go to state 7
    KEYWORD_PARAM       shift, and go to state 8
    TAG                 shift, and go to state 9

    term             go to state 23
    grammar_term     go to state 13
    pronoun_term     go to state 14
    type_term        go to state 15
    param_term       go to state 16
    predicate_term   go to state 17
    event_term       go to state 18
    quantified_term  go to state 19


State 5

    5 terms: '(' • terms ')' connective term
   23 pronoun_term: '(' • IDENTIFIER EQUAL PREDICATE '{' TAG '}' ')'
   32 event_term: '(' • EVENT '(' IDENTIFIER ')' EQUAL IDENTIFIER ')'

    PREDICATE           shift, and go to state 1
    IDENTIFIER          shift, and go to state 24
    KEYWORD_TRUEP       shift, and go to state 3
    NEG                 shift, and go to state 4
    '('                 shift, and go to state 5
    KEYWORD_QUANTIFIER  shift, and go to state 6
    KEYWORD_TYPE        shift, and go to state 7
    KEYWORD_PARAM       shift, and go to state 8
    TAG                 shift, and go to state 9
    EVENT               shift, and go to state 25

    terms            go to state 26
    term             go to state 12
    grammar_term     go to state 13
    pronoun_term     go to state 14
    type_term        go to state 15
    param_term       go to state 16
    predicate_term   go to state 17
    event_term       go to state 18
    quantified_term  go to state 19


State 6

   33 quantified_term: KEYWORD_QUANTIFIER • IDENTIFIER '.' '(' terms ')'

    IDENTIFIER  shift, and go to state 27


State 7

   24 type_term: KEYWORD_TYPE • '{' TAG '}' '(' arguments ')'

    '{'  shift, and go to state 28


State 8

   25 param_term: KEYWORD_PARAM • '{' TAG '}' '(' arguments ')'

    '{'  shift, and go to state 29


State 9

   22 grammar_term: TAG • '(' arguments ')'

    '('  shift, and go to state 30


State 10

    0 $accept: formula • $end

    $end  shift, and go to state 31


State 11

    1 formula: terms •

    $default  reduce using rule 1 (formula)


State 12

    3 terms: term • connective terms
    4      | term • connective '(' terms ')'
    6      | term •

    AND    shift, and go to state 32
    OR     shift, and go to state 33
    IMPLY  shift, and go to state 34
    EQUIV  shift, and go to state 35

    $default  reduce using rule 6 (terms)

    connective  go to state 36


State 13

   14 term: grammar_term •

    $default  reduce using rule 14 (term)


State 14

   17 term: pronoun_term •

    $default  reduce using rule 17 (term)


State 15

   10 term: type_term •

    $default  reduce using rule 10 (term)


State 16

   11 term: param_term •

    $default  reduce using rule 11 (term)


State 17

    9 term: predicate_term •

    $default  reduce using rule 9 (term)


State 18

   13 term: event_term •

    $default  reduce using rule 13 (term)


State 19

   12 term: quantified_term •

    $default  reduce using rule 12 (term)


State 20

   26 predicate_term: PREDICATE '{' • TAG '}' '(' arguments ')'
   27               | PREDICATE '{' • TAG '}' '(' '(' terms ')' ')'

    TAG  shift, and go to state 37


State 21

   16 term: IDENTIFIER EQUAL • IDENTIFIER

    IDENTIFIER  shift, and go to state 38


State 22

    8 terms: NEG '(' • terms ')'
   23 pronoun_term: '(' • IDENTIFIER EQUAL PREDICATE '{' TAG '}' ')'
   32 event_term: '(' • EVENT '(' IDENTIFIER ')' EQUAL IDENTIFIER ')'

    PREDICATE           shift, and go to state 1
    IDENTIFIER          shift, and go to state 24
    KEYWORD_TRUEP       shift, and go to state 3
    NEG                 shift, and go to state 4
    '('                 shift, and go to state 5
    KEYWORD_QUANTIFIER  shift, and go to state 6
    KEYWORD_TYPE        shift, and go to state 7
    KEYWORD_PARAM       shift, and go to state 8
    TAG                 shift, and go to state 9
    EVENT               shift, and go to state 25

    terms            go to state 39
    term             go to state 12
    grammar_term     go to state 13
    pronoun_term     go to state 14
    type_term        go to state 15
    param_term       go to state 16
    predicate_term   go to state 17
    event_term       go to state 18
    quantified_term  go to state 19


State 23

    2 terms: NEG term • connective terms
    7      | NEG term •

    AND    shift, and go to state 32
    OR     shift, and go to state 33
    IMPLY  shift, and go to state 34
    EQUIV  shift, and go to state 35

    $default  reduce using rule 7 (terms)

    connective  go to state 40


State 24

   16 term: IDENTIFIER • EQUAL IDENTIFIER
   23 pronoun_term: '(' IDENTIFIER • EQUAL PREDICATE '{' TAG '}' ')'

    EQUAL  shift, and go to state 41


State 25

   32 event_term: '(' EVENT • '(' IDENTIFIER ')' EQUAL IDENTIFIER ')'

    '('  shift, and go to state 42


State 26

    5 terms: '(' terms • ')' connective term

    ')'  shift, and go to state 43


State 27

   33 quantified_term: KEYWORD_QUANTIFIER IDENTIFIER • '.' '(' terms ')'

    '.'  shift, and go to state 44


State 28

   24 type_term: KEYWORD_TYPE '{' • TAG '}' '(' arguments ')'

    TAG  shift, and go to state 45


State 29

   25 param_term: KEYWORD_PARAM '{' • TAG '}' '(' arguments ')'

    TAG  shift, and go to state 46


State 30

   22 grammar_term: TAG '(' • arguments ')'

    PREDICATE           shift, and go to state 1
    IDENTIFIER          shift, and go to state 47
    KEYWORD_TRUEP       shift, and go to state 3
    NEG                 shift, and go to state 4
    '('                 shift, and go to state 5
    KEYWORD_QUANTIFIER  shift, and go to state 6
    KEYWORD_TYPE        shift, and go to state 7
    KEYWORD_PARAM       shift, and go to state 8
    TAG                 shift, and go to state 9

    terms            go to state 48
    term             go to state 12
    grammar_term     go to state 13
    pronoun_term     go to state 14
    type_term        go to state 15
    param_term       go to state 16
    predicate_term   go to state 17
    arguments        go to state 49
    argument         go to state 50
    event_term       go to state 18
    quantified_term  go to state 19


State 31

    0 $accept: formula $end •

    $default  accept


State 32

   18 connective: AND •

    $default  reduce using rule 18 (connective)


State 33

   21 connective: OR •

    $default  reduce using rule 21 (connective)


State 34

   20 connective: IMPLY •

    $default  reduce using rule 20 (connective)


State 35

   19 connective: EQUIV •

    $default  reduce using rule 19 (connective)


State 36

    3 terms: term connective • terms
    4      | term connective • '(' terms ')'

    PREDICATE           shift, and go to state 1
    IDENTIFIER          shift, and go to state 2
    KEYWORD_TRUEP       shift, and go to state 3
    NEG                 shift, and go to state 4
    '('                 shift, and go to state 51
    KEYWORD_QUANTIFIER  shift, and go to state 6
    KEYWORD_TYPE        shift, and go to state 7
    KEYWORD_PARAM       shift, and go to state 8
    TAG                 shift, and go to state 9

    terms            go to state 52
    term             go to state 12
    grammar_term     go to state 13
    pronoun_term     go to state 14
    type_term        go to state 15
    param_term       go to state 16
    predicate_term   go to state 17
    event_term       go to state 18
    quantified_term  go to state 19


State 37

   26 predicate_term: PREDICATE '{' TAG • '}' '(' arguments ')'
   27               | PREDICATE '{' TAG • '}' '(' '(' terms ')' ')'

    '}'  shift, and go to state 53


State 38

   16 term: IDENTIFIER EQUAL IDENTIFIER •

    $default  reduce using rule 16 (term)


State 39

    8 terms: NEG '(' terms • ')'

    ')'  shift, and go to state 54


State 40

    2 terms: NEG term connective • terms

    PREDICATE           shift, and go to state 1
    IDENTIFIER          shift, and go to state 2
    KEYWORD_TRUEP       shift, and go to state 3
    NEG                 shift, and go to state 4
    '('                 shift, and go to state 5
    KEYWORD_QUANTIFIER  shift, and go to state 6
    KEYWORD_TYPE        shift, and go to state 7
    KEYWORD_PARAM       shift, and go to state 8
    TAG                 shift, and go to state 9

    terms            go to state 55
    term             go to state 12
    grammar_term     go to state 13
    pronoun_term     go to state 14
    type_term        go to state 15
    param_term       go to state 16
    predicate_term   go to state 17
    event_term       go to state 18
    quantified_term  go to state 19


State 41

   16 term: IDENTIFIER EQUAL • IDENTIFIER
   23 pronoun_term: '(' IDENTIFIER EQUAL • PREDICATE '{' TAG '}' ')'

    PREDICATE   shift, and go to state 56
    IDENTIFIER  shift, and go to state 38


State 42

   32 event_term: '(' EVENT '(' • IDENTIFIER ')' EQUAL IDENTIFIER ')'

    IDENTIFIER  shift, and go to state 57


State 43

    5 terms: '(' terms ')' • connective term

    AND    shift, and go to state 32
    OR     shift, and go to state 33
    IMPLY  shift, and go to state 34
    EQUIV  shift, and go to state 35

    connective  go to state 58


State 44

   33 quantified_term: KEYWORD_QUANTIFIER IDENTIFIER '.' • '(' terms ')'

    '('  shift, and go to state 59


State 45

   24 type_term: KEYWORD_TYPE '{' TAG • '}' '(' arguments ')'

    '}'  shift, and go to state 60


State 46

   25 param_term: KEYWORD_PARAM '{' TAG • '}' '(' arguments ')'

    '}'  shift, and go to state 61


State 47

   16 term: IDENTIFIER • EQUAL IDENTIFIER
   30 argument: IDENTIFIER •

    EQUAL  shift, and go to state 21

    $default  reduce using rule 30 (argument)


State 48

   31 argument: terms •

    $default  reduce using rule 31 (argument)


State 49

   22 grammar_term: TAG '(' arguments • ')'
   28 arguments: arguments • COMMA argument

    COMMA  shift, and go to state 62
    ')'    shift, and go to state 63


State 50

   29 arguments: argument •

    $default  reduce using rule 29 (arguments)


State 51

    4 terms: term connective '(' • terms ')'
    5      | '(' • terms ')' connective term
   23 pronoun_term: '(' • IDENTIFIER EQUAL PREDICATE '{' TAG '}' ')'
   32 event_term: '(' • EVENT '(' IDENTIFIER ')' EQUAL IDENTIFIER ')'

    PREDICATE           shift, and go to state 1
    IDENTIFIER          shift, and go to state 24
    KEYWORD_TRUEP       shift, and go to state 3
    NEG                 shift, and go to state 4
    '('                 shift, and go to state 5
    KEYWORD_QUANTIFIER  shift, and go to state 6
    KEYWORD_TYPE        shift, and go to state 7
    KEYWORD_PARAM       shift, and go to state 8
    TAG                 shift, and go to state 9
    EVENT               shift, and go to state 25

    terms            go to state 64
    term             go to state 12
    grammar_term     go to state 13
    pronoun_term     go to state 14
    type_term        go to state 15
    param_term       go to state 16
    predicate_term   go to state 17
    event_term       go to state 18
    quantified_term  go to state 19


State 52

    3 terms: term connective terms •

    $default  reduce using rule 3 (terms)


State 53

   26 predicate_term: PREDICATE '{' TAG '}' • '(' arguments ')'
   27               | PREDICATE '{' TAG '}' • '(' '(' terms ')' ')'

    '('  shift, and go to state 65


State 54

    8 terms: NEG '(' terms ')' •

    $default  reduce using rule 8 (terms)


State 55

    2 terms: NEG term connective terms •

    $default  reduce using rule 2 (terms)


State 56

   23 pronoun_term: '(' IDENTIFIER EQUAL PREDICATE • '{' TAG '}' ')'

    '{'  shift, and go to state 66


State 57

   32 event_term: '(' EVENT '(' IDENTIFIER • ')' EQUAL IDENTIFIER ')'

    ')'  shift, and go to state 67


State 58

    5 terms: '(' terms ')' connective • term

    PREDICATE           shift, and go to state 1
    IDENTIFIER          shift, and go to state 2
    KEYWORD_TRUEP       shift, and go to state 3
    '('                 shift, and go to state 68
    KEYWORD_QUANTIFIER  shift, and go to state 6
    KEYWORD_TYPE        shift, and go to state 7
    KEYWORD_PARAM       shift, and go to state 8
    TAG                 shift, and go to state 9

    term             go to state 69
    grammar_term     go to state 13
    pronoun_term     go to state 14
    type_term        go to state 15
    param_term       go to state 16
    predicate_term   go to state 17
    event_term       go to state 18
    quantified_term  go to state 19


State 59

   33 quantified_term: KEYWORD_QUANTIFIER IDENTIFIER '.' '(' • terms ')'

    PREDICATE           shift, and go to state 1
    IDENTIFIER          shift, and go to state 2
    KEYWORD_TRUEP       shift, and go to state 3
    NEG                 shift, and go to state 4
    '('                 shift, and go to state 5
    KEYWORD_QUANTIFIER  shift, and go to state 6
    KEYWORD_TYPE        shift, and go to state 7
    KEYWORD_PARAM       shift, and go to state 8
    TAG                 shift, and go to state 9

    terms            go to state 70
    term             go to state 12
    grammar_term     go to state 13
    pronoun_term     go to state 14
    type_term        go to state 15
    param_term       go to state 16
    predicate_term   go to state 17
    event_term       go to state 18
    quantified_term  go to state 19


State 60

   24 type_term: KEYWORD_TYPE '{' TAG '}' • '(' arguments ')'

    '('  shift, and go to state 71


State 61

   25 param_term: KEYWORD_PARAM '{' TAG '}' • '(' arguments ')'

    '('  shift, and go to state 72


State 62

   28 arguments: arguments COMMA • argument

    PREDICATE           shift, and go to state 1
    IDENTIFIER          shift, and go to state 47
    KEYWORD_TRUEP       shift, and go to state 3
    NEG                 shift, and go to state 4
    '('                 shift, and go to state 5
    KEYWORD_QUANTIFIER  shift, and go to state 6
    KEYWORD_TYPE        shift, and go to state 7
    KEYWORD_PARAM       shift, and go to state 8
    TAG                 shift, and go to state 9

    terms            go to state 48
    term             go to state 12
    grammar_term     go to state 13
    pronoun_term     go to state 14
    type_term        go to state 15
    param_term       go to state 16
    predicate_term   go to state 17
    argument         go to state 73
    event_term       go to state 18
    quantified_term  go to state 19


State 63

   22 grammar_term: TAG '(' arguments ')' •

    $default  reduce using rule 22 (grammar_term)


State 64

    4 terms: term connective '(' terms • ')'
    5      | '(' terms • ')' connective term

    ')'  shift, and go to state 74


State 65

   26 predicate_term: PREDICATE '{' TAG '}' '(' • arguments ')'
   27               | PREDICATE '{' TAG '}' '(' • '(' terms ')' ')'

    PREDICATE           shift, and go to state 1
    IDENTIFIER          shift, and go to state 47
    KEYWORD_TRUEP       shift, and go to state 3
    NEG                 shift, and go to state 4
    '('                 shift, and go to state 75
    KEYWORD_QUANTIFIER  shift, and go to state 6
    KEYWORD_TYPE        shift, and go to state 7
    KEYWORD_PARAM       shift, and go to state 8
    TAG                 shift, and go to state 9

    terms            go to state 48
    term             go to state 12
    grammar_term     go to state 13
    pronoun_term     go to state 14
    type_term        go to state 15
    param_term       go to state 16
    predicate_term   go to state 17
    arguments        go to state 76
    argument         go to state 50
    event_term       go to state 18
    quantified_term  go to state 19


State 66

   23 pronoun_term: '(' IDENTIFIER EQUAL PREDICATE '{' • TAG '}' ')'

    TAG  shift, and go to state 77


State 67

   32 event_term: '(' EVENT '(' IDENTIFIER ')' • EQUAL IDENTIFIER ')'

    EQUAL  shift, and go to state 78


State 68

   23 pronoun_term: '(' • IDENTIFIER EQUAL PREDICATE '{' TAG '}' ')'
   32 event_term: '(' • EVENT '(' IDENTIFIER ')' EQUAL IDENTIFIER ')'

    IDENTIFIER  shift, and go to state 79
    EVENT       shift, and go to state 25


State 69

    5 terms: '(' terms ')' connective term •

    $default  reduce using rule 5 (terms)


State 70

   33 quantified_term: KEYWORD_QUANTIFIER IDENTIFIER '.' '(' terms • ')'

    ')'  shift, and go to state 80


State 71

   24 type_term: KEYWORD_TYPE '{' TAG '}' '(' • arguments ')'

    PREDICATE           shift, and go to state 1
    IDENTIFIER          shift, and go to state 47
    KEYWORD_TRUEP       shift, and go to state 3
    NEG                 shift, and go to state 4
    '('                 shift, and go to state 5
    KEYWORD_QUANTIFIER  shift, and go to state 6
    KEYWORD_TYPE        shift, and go to state 7
    KEYWORD_PARAM       shift, and go to state 8
    TAG                 shift, and go to state 9

    terms            go to state 48
    term             go to state 12
    grammar_term     go to state 13
    pronoun_term     go to state 14
    type_term        go to state 15
    param_term       go to state 16
    predicate_term   go to state 17
    arguments        go to state 81
    argument         go to state 50
    event_term       go to state 18
    quantified_term  go to state 19


State 72

   25 param_term: KEYWORD_PARAM '{' TAG '}' '(' • arguments ')'

    PREDICATE           shift, and go to state 1
    IDENTIFIER          shift, and go to state 47
    KEYWORD_TRUEP       shift, and go to state 3
    NEG                 shift, and go to state 4
    '('                 shift, and go to state 5
    KEYWORD_QUANTIFIER  shift, and go to state 6
    KEYWORD_TYPE        shift, and go to state 7
    KEYWORD_PARAM       shift, and go to state 8
    TAG                 shift, and go to state 9

    terms            go to state 48
    term             go to state 12
    grammar_term     go to state 13
    pronoun_term     go to state 14
    type_term        go to state 15
    param_term       go to state 16
    predicate_term   go to state 17
    arguments        go to state 82
    argument         go to state 50
    event_term       go to state 18
    quantified_term  go to state 19


State 73

   28 arguments: arguments COMMA argument •

    $default  reduce using rule 28 (arguments)


State 74

    4 terms: term connective '(' terms ')' •
    5      | '(' terms ')' • connective term

    AND    shift, and go to state 32
    OR     shift, and go to state 33
    IMPLY  shift, and go to state 34
    EQUIV  shift, and go to state 35

    $default  reduce using rule 4 (terms)

    connective  go to state 58


State 75

    5 terms: '(' • terms ')' connective term
   23 pronoun_term: '(' • IDENTIFIER EQUAL PREDICATE '{' TAG '}' ')'
   27 predicate_term: PREDICATE '{' TAG '}' '(' '(' • terms ')' ')'
   32 event_term: '(' • EVENT '(' IDENTIFIER ')' EQUAL IDENTIFIER ')'

    PREDICATE           shift, and go to state 1
    IDENTIFIER          shift, and go to state 24
    KEYWORD_TRUEP       shift, and go to state 3
    NEG                 shift, and go to state 4
    '('                 shift, and go to state 5
    KEYWORD_QUANTIFIER  shift, and go to state 6
    KEYWORD_TYPE        shift, and go to state 7
    KEYWORD_PARAM       shift, and go to state 8
    TAG                 shift, and go to state 9
    EVENT               shift, and go to state 25

    terms            go to state 83
    term             go to state 12
    grammar_term     go to state 13
    pronoun_term     go to state 14
    type_term        go to state 15
    param_term       go to state 16
    predicate_term   go to state 17
    event_term       go to state 18
    quantified_term  go to state 19


State 76

   26 predicate_term: PREDICATE '{' TAG '}' '(' arguments • ')'
   28 arguments: arguments • COMMA argument

    COMMA  shift, and go to state 62
    ')'    shift, and go to state 84


State 77

   23 pronoun_term: '(' IDENTIFIER EQUAL PREDICATE '{' TAG • '}' ')'

    '}'  shift, and go to state 85


State 78

   32 event_term: '(' EVENT '(' IDENTIFIER ')' EQUAL • IDENTIFIER ')'

    IDENTIFIER  shift, and go to state 86


State 79

   23 pronoun_term: '(' IDENTIFIER • EQUAL PREDICATE '{' TAG '}' ')'

    EQUAL  shift, and go to state 87


State 80

   33 quantified_term: KEYWORD_QUANTIFIER IDENTIFIER '.' '(' terms ')' •

    $default  reduce using rule 33 (quantified_term)


State 81

   24 type_term: KEYWORD_TYPE '{' TAG '}' '(' arguments • ')'
   28 arguments: arguments • COMMA argument

    COMMA  shift, and go to state 62
    ')'    shift, and go to state 88


State 82

   25 param_term: KEYWORD_PARAM '{' TAG '}' '(' arguments • ')'
   28 arguments: arguments • COMMA argument

    COMMA  shift, and go to state 62
    ')'    shift, and go to state 89


State 83

    5 terms: '(' terms • ')' connective term
   27 predicate_term: PREDICATE '{' TAG '}' '(' '(' terms • ')' ')'

    ')'  shift, and go to state 90


State 84

   26 predicate_term: PREDICATE '{' TAG '}' '(' arguments ')' •

    $default  reduce using rule 26 (predicate_term)


State 85

   23 pronoun_term: '(' IDENTIFIER EQUAL PREDICATE '{' TAG '}' • ')'

    ')'  shift, and go to state 91


State 86

   32 event_term: '(' EVENT '(' IDENTIFIER ')' EQUAL IDENTIFIER • ')'

    ')'  shift, and go to state 92


State 87

   23 pronoun_term: '(' IDENTIFIER EQUAL • PREDICATE '{' TAG '}' ')'

    PREDICATE  shift, and go to state 56


State 88

   24 type_term: KEYWORD_TYPE '{' TAG '}' '(' arguments ')' •

    $default  reduce using rule 24 (type_term)


State 89

   25 param_term: KEYWORD_PARAM '{' TAG '}' '(' arguments ')' •

    $default  reduce using rule 25 (param_term)


State 90

    5 terms: '(' terms ')' • connective term
   27 predicate_term: PREDICATE '{' TAG '}' '(' '(' terms ')' • ')'

    ')'    shift, and go to state 93
    AND    shift, and go to state 32
    OR     shift, and go to state 33
    IMPLY  shift, and go to state 34
    EQUIV  shift, and go to state 35

    connective  go to state 58


State 91

   23 pronoun_term: '(' IDENTIFIER EQUAL PREDICATE '{' TAG '}' ')' •

    $default  reduce using rule 23 (pronoun_term)


State 92

   32 event_term: '(' EVENT '(' IDENTIFIER ')' EQUAL IDENTIFIER ')' •

    $default  reduce using rule 32 (event_term)


State 93

   27 predicate_term: PREDICATE '{' TAG '}' '(' '(' terms ')' ')' •

    $default  reduce using rule 27 (predicate_term)
